@@ -4,17 +4,15 @@
 
 [mushy] /freeze <playername> - stops the player from moving and breaking/placing. handy for if someone is griefing!
 
-[AAAA] Money system using /balance and /pay <playername> maybe even an API that other plugins can use! :D
+[AAAA][DONE] Money system using /balance and /pay <playername> maybe even an API that other plugins can use! :D
 
-[AAAA] Api for the money system
+[AAAA][DONE] Api for the money system
 
 *Antigrief - disable blocks and tools. ( abes could do that)
 
-[AAAA] /thru - go through the block in front of you, without breaking it.
+[AAAA]*Advancsd logging features - log Deaths, pvp, commands etc to individual .Txt files in the Mbessentials folder
 
-*Advancsd logging features - log Deaths, pvp, commands etc to individual .Txt files in the Mbessentials folder
-
-*Config system - enable/disabke Any feature of MBEssentials you want.
+[Everyone]*Config system - enable/disable Any feature of MBEssentials you want.
 
 [mushy] create a website for the plugin, along with all commands, permissions and description!
 
