@@ -2,7 +2,6 @@ package plugins.mbes;
 
 import com.mbserver.api.MBServerPlugin;
 import com.mbserver.api.Manifest;
-
 import plugins.mbes.commands.Commands;
 import plugins.mbes.commands.ModCmds;
 import plugins.mbes.commands.MoneyCmds;
